# cmsc-433

./: README.md
HOMEWORKS/Parsing/: miniDafny.cabal
HOMEWORKS/Parsing/.stack-work/ghci/dc453cba/: cabal_macros.h
HOMEWORKS/Parsing/dafny/: findMinVal.dfy  minMax.dfy  other.dfy
HOMEWORKS/Parsing/src/: DafnyParser.hs  Main.hs  Syntax.hs
HOMEWORKS/PrettyPrinting/: miniDafny.cabal
HOMEWORKS/PrettyPrinting/dafny/: findMinIndex.dfy  findMinVal.dfy
HOMEWORKS/PrettyPrinting/src/: Main.hs
MiniDafny/Parsing/.stack-work/: stack.sqlite3
MiniDafny/Parsing/dafny/: findMinIndex.dfy  findMinVal.dfy
MiniDafny/Parsing/src/: Syntax.hs
MiniDafny/PrettyPrinting/: LICENSE
MiniDafny/PrettyPrinting/.stack-work/: stack.sqlite3
MiniDafny/PrettyPrinting/.stack-work/ghci/5bac3d98/: cabal_macros.h
MiniDafny/PrettyPrinting/dafny/: arraySpec.dfy
MiniDafny/WeakestPrec/: CHANGELOG.md  Makefile  miniDafny.cabal
MiniDafny/WeakestPrec/.stack-work/: stack.sqlite3
MiniDafny/WeakestPrec/.stack-work/ghci/6b89dd05/: cabal_macros.h
MiniDafny/WeakestPrec/dafny/: IntDiv.dfy  LoopToZero.dfy  Square.dfy  SquareRoot.dfy  TwoLoops.dfy  minMax.dfy
MiniDafny/WeakestPrec/src/: DafnyParser.hs  Main.hs  Printer.hs  Syntax.hs  WP.hs
homework-0/: hello-world.dfy
homework-0/haskell-h0/: package.yaml
homework-1/: Homework1.dfy
homework-2/: Homework2.dfy
homework-3/: Main.hs
homework-3/.stack-work/: stack.sqlite3
homework-3/.stack-work/ghci/d34fa2fe/: cabal_macros.h
homework-3/hw03/hw03/: Main.hs  hw03.cabal
homework-4/PrettyPrinting/: stack.yaml
homework-4/PrettyPrinting/dafny/: abs.dfy
homework-4/PrettyPrinting/src/: Syntax.hs
lectures/: HoareLogicAssertions.dfy  MiniDafnyGenerator.hs  Programming-in-Dafny.dfy
lectures/dynamic/: Backup  Dynamic.hs  cmsc433-dynamic.cabal
lectures/lecture1/: Programming-in-Dafny.dfy
lectures/lecture10/typeclasses/: Classes.hs  MonoidFoldable.hs  stack.yaml
lectures/lecture10/typeclasses/typeclasses/: .hlint.yaml  Classes.hs  MonoidFoldable.hs  cmsc433-classes.cabal
lectures/lecture11/monads/: .hlint.yaml  CHANGELOG.md  GenericMonads.hs  Monads.hs  monads.cabal
lectures/lecture12/: Printing.hs
lectures/lecture12/state/: .hlint.yaml  CHANGELOG.md  State.hs  StateMonad.hs  cmsc433-state.cabal
lectures/lecture2/: Logic-in-Dafny.dfy
lectures/lecture3/: LinearSearch.dfy  minMax.dfy
lectures/lecture4/: BinSearch.dfy  Doubling.dfy  Fibonacci.dfy  findMinIndex.dfy  findMinVal.dfy
lectures/lecture5/: HoareLogicAssertions.dfy
lectures/lecture7/intro-template/: Basics.hs  CHANGELOG.md  README.md  cmsc433.cabal
lectures/lecture8/: DList.hs  HigherOrder.hs  SecretCode.hs
lectures/lecture9/trees/: Datatypes.hs  Foldr.hs  TreeFolds.hs  cmsc433-trees.cabal
lectures/lecture9/trees/trees/: .hlint.yaml
lectures/midterm-review/: review.dfy
lectures/parsers/: .hlint.yaml  CHANGELOG.md  Parsers.hs  Xml.hs  cmsc433-parsers.cabal
lectures/quickcheck/: .hlint.yaml  QuickCheck.hs  cmsc433-quickcheck.cabal
project-0/haskell-p0/: CHANGELOG.md  README.md  haskell-p0.cabal  stack.yaml
