cabal-version:       >=1.10

name:                cmsc433-dynamic
version:             0.1.0.0
license-file:        LICENSE
maintainer:          leonidas@umd.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Dynamic
  build-depends:       QuickCheck >= 2.14
                     , array >= 0.5.4.0
                     , base >= 4.14
                     , monad-memo
  default-language:    Haskell2010
