cabal-version:       >=1.10
name:                cmsc433-parsers
version:             0.1.0.0
synopsis:            Applicative Parsing
license-file:        LICENSE
maintainer:          leonidas@umd.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Parsers
                     , Parser
                     , Xml
  build-depends:       base >= 4.14
  default-language:    Haskell2010
  ghc-options:         -Wincomplete-patterns
  default-extensions:  ScopedTypeVariables
                     , TypeApplications
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , GeneralizedNewtypeDeriving
                     , TupleSections
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , UndecidableInstances
                     , NoMonomorphismRestriction
                     , NoStarIsType
