cabal-version:       >=1.10
name:                cmsc433-quickcheck
version:             0.1.0.0
license-file:        LICENSE
maintainer:          leonidas@umd.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:      QuickCheck
  build-depends:       base >= 4.14, QuickCheck, HUnit
  default-language:    Haskell2010
  default-extensions:  MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , InstanceSigs
                     , ScopedTypeVariables
                     , NoStarIsType
  ghc-options:         -Wno-type-defaults -Wincomplete-patterns
