cabal-version:       >=1.10

name:                monads
version:             0.1.0.0
synopsis:            Maybe and List monads
license:             OtherLicense
license-file:        LICENSE
maintainer:          leonidas@umd.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Monads
                     , GenericMonads
  build-depends:       base >= 4.14
                     , HUnit >= 1.6
                     , QuickCheck >= 2.14
                     , containers >= 0.6
  default-language:    Haskell2010
  ghc-options:         -Wincomplete-patterns -Wno-missing-signatures
  default-extensions:  ScopedTypeVariables
                     , TypeApplications
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , GeneralizedNewtypeDeriving
                     , TupleSections
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , UndecidableInstances
                     , NoMonomorphismRestriction
                     , NoStarIsType
