cabal-version:       >=1.10
name:                cmsc433-trees
version:             0.1.0.0
synopsis:            Class materials from CMSC 433, UMD
description:         Datatypes and Trees
license:             MIT
license-file:        LICENSE
maintainer:          leonidas@umd.edu
-- copyright:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library 
  exposed-modules:     Datatypes
                       Foldr
                       TreeFolds
  build-depends:       base >= 4.14 && < 4.15
                       , HUnit >= 1.6
                       , dlist
  default-language:    Haskell2010
  ghc-options:         -Wno-type-defaults -Wincomplete-patterns

